@@ -1,3 +1,7 @@
+* Tue Sep 11 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 5.0.2-0
+- Updated $app_pki_external_source to accept any string. This matches the
+  functionality of pki::copy.
+
 * Thu Jun 14 2018 Nick Miller <nick.miller@onyxpoint.com> - 5.0.2-0
 - Update systemd fixtures and CI assets
 
